fix: mobile layout issue

--- a/src/components/Share/Share.module.css
+++ b/src/components/Share/Share.module.css
@@ -1,5 +1,6 @@
 .share {
   margin-top: 2rem;
+  width: 100%;
 }
 
 .shareTitle {
